# autoresearch-glm

./: .gitignore  README.md  analysis.ipynb  build_model_forms.py  model_forms.tsv  mols_adaptive.py  mols_search.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
mols10/: README.md  mols_adaptive.py  mols_alt_sweep.py  mols_cpsat_proof.py  mols_cpsat_worker.py  mols_crossover_search.py  mols_e31_feas.py  mols_e31_long.py  mols_e31_sweep2.py  mols_e32_feas.py  mols_e32_long.py  mols_e32_sweep.py  mols_joint_sa.py  mols_l3_lns.py  mols_l3_search.py  mols_l3sa.py  mols_maxsat_search.py  mols_reverse_search.py  mols_sa_e32.py  mols_sat_worker.py  verify_results.py  watchdog.sh
mols10/docs/: 01_problem_statement.md  02_mathematical_theory.md  03_algorithms.md  04_experimental_results.md  05_near_miss_analysis.md  06_ct_barrier.md  07_implementation.md  08_conclusions_and_future_work.md  09_appendix_data.md  README.md  findings.md  paper.tex
mols10/results/: checkpoint_l3.json  e29_ee29e34e_best_l3.json  iso_tv21_0_best_l3.json  l3_search_log.tsv  mdecomp113_best.json  mdecomp163_best_l3.json  mdecomp191_best_l3.json  mdecomp279_best_l3.json  mdecomp279_v3_best.json  mdecomp281_best_l3.json  mdecomp281_scan_seed_l3.json  mdecomp45_best_l3.json  mdecomp48_best_l3.json  mdecomp48_fresh_best_l3.json  mdecomp56_best.json  mdecomp68_best.json  mdecomp71_best_l3.json  mdecomp71_fresh_best_l3.json  mdecomp_scan_results.json  mols_pair_seed42.json  mols_pairs_collection.json  near_miss_triple.json  promising_pairs.json
