[project]
name = "autoresearch-glm"
version = "0.1.0"
description = "A minimal tabular GLM fork of karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "ucimlrepo>=0.0.7",
    "xgboost>=2.0",
]
